// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldExpansionToggle/> custom properties 1`] = `
<div
  className="field-icon expand-custom-cls"
  id="expand-custom-id"
  onClick={[MockFunction]}
  title="Custom click to expand"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-plus-square fa-w-14 fa-lg field-highlighted"
    data-icon="plus-square"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-32 252c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92H92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`<FieldExpansionToggle/> default properties 1`] = `
<div
  className="field-icon "
  id="expand-id"
  onClick={[MockFunction]}
  title="Click to expand"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-plus-square fa-w-14 fa-lg "
    data-icon="plus-square"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-32 252c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92H92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`<FieldExpansionToggle/> expanded and highlighted 1`] = `
<div
  className="field-icon "
  id="expand-id"
  onClick={[MockFunction]}
  title="Click to collapse"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-minus-square fa-w-14 fa-lg field-not-highlighted"
    data-icon="minus-square"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zM92 296c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h264c6.6 0 12 5.4 12 12v56c0 6.6-5.4 12-12 12H92z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;
